--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru-RU">
 <head>
-    <title>serenity-net.org</title>
+    <title>meathost.org</title>
     <meta http-equiv="Content-Type" content="text/html"; charset=utf-8">
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -11,7 +11,10 @@
 <div>
 <form action="/reg" method="POST">
 <table>
-<tr><td>name:</td><td><input type="text" id="name" name="name"></td></tr>
+<tr><td>nicname:</td><td><input type="text" id="name" name="name"></td></tr>
+<tr><td>invite:</td><td><input type="text" id="invite" name="invite"></td></tr>
+<tr><td>First name</td><td><input type="text" id="fname" name="fname"></td></tr>
+<tr><td>Second name</td><td><input type="text" id="fname" name="sname"></td></tr>
 <tr><td>email:</td><td><input type="text" id="email" name="email"></td></tr>
 <tr><td>password:</td><td><input type="password" id="pass" name="pass"></td></tr>
 <tr><td>once more pass:</td><td><input type="password" id="pmore" name="pmore"></td></tr>
