--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru-RU">
 <head>
-    <title>meathost.org</title>
+    <title>k8s.shushik.kiev.ua</title>
     <meta http-equiv="Content-Type" content="text/html"; charset=utf-8">
     <link rel="stylesheet" href="/style.css">
 </head>
