--- a/summer.html
+++ b/summer.html
@@ -5,7 +5,7 @@
 <html lang="ru-RU">
 <head>
 <meta charset="utf-8">
-<title>meathost.org</title>
+<title>k8s.shushik.kiev.ua</title>
     <meta http-equiv="Content-Type" content="text/html"; charset=utf-8">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
