--- a/bhead.html
+++ b/bhead.html
@@ -2,7 +2,7 @@
 <html lang="ru-RU">
 <head>
 <meta charset="utf-8">
-<title>k8s.shushik.kiev.ua</title>
+<title>dev.shushik.kiev.ua</title>
     <meta http-equiv="Content-Type" content="text/html"; charset=utf-8">
     <link rel="stylesheet" href="/style.css">
 <head>
